# visual-fluids

./: .gitignore  CMakeLists.txt  README.md  jaxenv_linux.yaml  jaxenv_osx.yaml
NeuralODEs/: .gitignore  backup.ipynb  control_two_targets.ipynb  control_with_energy.ipynb  near_optimal_control.ipynb  neural_ode.ipynb  neural_ode_control.ipynb  utils.py
Parareal/: 01_simple_ode_parareal.ipynb
PhiFlow/: .gitignore
PhysicsBasedDL/: ForwardSimPhiflow.ipynb  SupervisedLearningRANS.ipynb  TeaserExample.ipynb  ateaserexample.ipynb  burgers_with_diff_phys.ipynb  burgers_with_pinn.ipynb  forward_sim_phiflow.ipynb  jaxenv_osx.yaml  jaxenv_win32.yaml  supervised_learning_rans.ipynb  utility_functions.py  utils.py
mantaflow/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
mantaflow/source/plugin/: numpyconvert.cpp
mantaflow/tools/cmake/: FindTBB.cmake
notebooks/differentiable-physics/: 04_burgers_with_pinn.ipynb
oneTBB/: .gitignore
pbdl/: ateaserexample.ipynb  jaxenv.yaml
phiflow2blender/: .gitignore  README.md
phiflow2blender/tutorial/: TUM.py  manta2vdb.py  myrender.blend
